k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: lrg-website-clusterip
  namespace: lrg-website-prod
spec:
  selector:
    app: lrg-website
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
